--- a/ten_10_pandas.ipynb
+++ b/ten_10_pandas.ipynb
@@ -13,22 +13,24 @@
     {
       "cell_type": "code",
       "source": [
-        "print('Hello World')"
+        "print('Hello World')\n",
+        "print('wrihgbqourybgiuqebrgo')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "_-tjNNdl67pd",
-        "outputId": "f9291c2f-ef58-4059-a541-28dc6590e952"
+        "outputId": "30ba34fc-078c-42e5-861b-ba8c612e317f"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hello World\n"
+            "Hello World\n",
+            "wrihgbqourybgiuqebrgo\n"
           ]
         }
       ]
