--- a/ten_10_pandas.ipynb
+++ b/ten_10_pandas.ipynb
@@ -18,7 +18,7 @@
       "metadata": {
         "id": "Ngq8rkk-9u-6"
       },
-      "execution_count": 2,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -49,12 +49,12 @@
         "tips.head(5)"
       ],
       "metadata": {
-        "id": "9TPH97r3-_5M",
-        "outputId": "dd1d794e-d4c2-46c5-e61c-46a7df7338e7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "9TPH97r3-_5M",
+        "outputId": "dd1d794e-d4c2-46c5-e61c-46a7df7338e7"
       },
       "execution_count": 11,
       "outputs": [
@@ -380,12 +380,12 @@
         "type(tips)"
       ],
       "metadata": {
-        "id": "G4IsgsST_Rca",
-        "outputId": "046c8611-7082-42e1-a87a-2d6d4da5bcb5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 203
-        }
+        },
+        "id": "G4IsgsST_Rca",
+        "outputId": "046c8611-7082-42e1-a87a-2d6d4da5bcb5"
       },
       "execution_count": 12,
       "outputs": [
@@ -570,9 +570,71 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "d = {'a': 1, 'b': [0,1,2,3,4], 'c': {0 : 2, 3 :4}}\n",
+        "series = pd.Series(data = d, name = 'Data Series', )\n",
+        "series['b']\n",
+        "series['b'][3]\n",
+        "series['c'][0]\n",
+        "type(series['b'])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J3ee47GBCE1Z",
+        "outputId": "367beb09-ccca-4fe1-b8af-a94e047cd3cb"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "array = np.array([1,2])\n",
+        "s1 = pd.Series( array , copy = True)\n",
+        "s1[0] = 10\n",
+        "print(s1)\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "id": "GFLDpzBEIzdn",
+        "outputId": "390441f2-3437-41ec-ecee-a4850f13e4b1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0    10\n",
+            "1     2\n",
+            "dtype: int64\n",
+            "[1 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "J3ee47GBCE1Z"
+        "id": "Az39_1zwJqqK"
       },
       "execution_count": null,
       "outputs": []
@@ -581,7 +643,6 @@
   "metadata": {
     "colab": {
       "name": "Welcome To Colab",
-      "toc_visible": true,
       "provenance": [],
       "include_colab_link": true
     },
